--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         border-width: 0px;
         border-radius: 20%;
     
-        background-color: seagreen;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-color: rgba(127, 127, 64, 0.4);
     }
     .centring {
         display: flex;
