--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         position: relative;
         width: 100%;
         padding-bottom: 100%;
+
+        background-size: cover;
+        background-repeat: no-repeat;
     }
     .gameField {
         position: absolute;
